--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Abubakar Kasule</title>
+        <title>Ana Sumbo</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
         <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
+        <link href="//db.onlinewebfonts.com/c/b1edfa746f416280b3502ba39df2c3ae?family=Canela" rel="stylesheet" type="text/css"/>
+        <link href="http://fonts.cdnfonts.com/css/timeless" rel="stylesheet">
     </head>
     <body>
         <div id="main">Loading</div>
