--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Ana Sumbo</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
         <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
         <link href="//db.onlinewebfonts.com/c/b1edfa746f416280b3502ba39df2c3ae?family=Canela" rel="stylesheet" type="text/css"/>
